PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

phoromatic: From rootadmin allow the rootadmin to override/reset a user account password
phodevi: Windows battery reporting discharge rate support

Phoronix Test Suite 8.0.1-Aremark
26 June 2018

pts-core: Add "wine" external dependency support
pts-core: Fix skip-test behavior
pts-core: Web browser handling improvements on Windows, other Windows updates
phoromatic: Various minor fixes and enhancements
phodevi: Add USE_WINE environment variable check, point it towards the wine binary you wish to test

Phoronix Test Suite 8.0.0-Aremark
5 June 2018

pts-core: Various macOS support tweaks/improvements
pts-core: Add external dependency support for Brew macOS package manager
pts-core: Avoid duplicate test identifiers on graphs
phodevi: Improved X.Org Server version detection

Phoronix Test Suite 8.0.0 Milestone 5
30 May 2018

pts-core: Termux external dependency support
pts-core: Other minor tweaks and changes
phoromatic: Better handling when the Phoromatic Server is run without an Internet connection or Internet disabled
phoromatic: A wide variety of other Phoromatic Server optimizations and improvements
phodevi: Add spec_store_bypass / Spectre Variant 4 reporting

Phoronix Test Suite 8.0.0 Milestone 4
16 May 2018

phoromatic: Add a "email all users" option to the rootadmin page
phoromatic: Improve search functionality on results page, allow boolean expressions, date ranges, many other search features
phoromatic: Various search improvements to `phoronix-test-suite search`
phoromatic: Allow new test profiles to be created from Phoromatic web UI
pts-core: New create-test-profile sub-command for guided process to test profile creation
pts-core: Basic changes, should be all that's needed for EU GDPR safeguards
phodevi: RISC-V SiFive CPU detection

Phoronix Test Suite 8.0.0 Milestone 3
16 April 2018

pts-core: Improvements for BSD / FreeBSD support
pts-core: Add "V8" external dependency for V8 JavaScript engine