@@ -24,11 +24,15 @@
 class phodevi_windows_parser
 {
 
-	public static function get_wmi_object($object, $name)
+	public static function get_wmi_object($object, $name, $to_array = false)
 	{
 		$wmi_output = trim(shell_exec('powershell "$obj = Get-WmiObject ' . $object . '; echo $obj.' . $name . '"'));
 		$wmi_output = strpos($wmi_output, 'Invalid') == false ? trim($wmi_output) : null;
-		if(($x = strpos($wmi_output, "\n")) !== false)
+		if($to_array)
+		{
+			$wmi_output = explode("\n", $wmi_output);
+		}
+		else if(($x = strpos($wmi_output, "\n")) !== false)
 		{
 			$wmi_output = substr($wmi_output, 0, $x);
 		}
