@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 phoromatic: From rootadmin allow the rootadmin to override/reset a user account password
 phodevi: Windows battery reporting discharge rate support
+phodevi: Improved multi CPU socket reporting on Windows
 
 Phoronix Test Suite 8.0.1-Aremark
 26 June 2018
